# arrowhead-qa

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml
examples/: calls.csv  example-config.yaml  urls.txt
src/arrowhead_qa/: analyze.py  cli.py  config.py  dashboard.py  gemini.py  prompts.py  report.py  schema.py
tests/: test_config.py
