[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arrowhead-qa"
version = "0.1.0"
description = "Gemini-powered QA analyzer for Arrowhead AI voice-bot call recordings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Arrowhead QA Contributors" }]
dependencies = [
  "google-genai>=0.8.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0",
  "typer>=0.12.0",
  "playwright>=1.49.0",
]

[project.scripts]
arrowhead-qa = "arrowhead_qa.cli:app"

[project.urls]
Homepage = "https://github.com/getbelong/arrowhead-qa"

[tool.hatch.build.targets.wheel]
packages = ["src/arrowhead_qa"]
